force-app/main/default/objects/Creditsafe_Company_Credit_Score__c/Creditsafe_Company_Credit_Score__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyCreditScoreV2.</description>
    <label>Creditsafe Company Credit Score</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Creditsafe Company Credit Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Credit Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>