force-app/main/default/objects/Creditsafe_Company_Credit_Score__c/fields/Current_CR_Common_Description__c.field-meta.xml
<CustomField>
    <fullName>Current_CR_Common_Description__c</fullName>
    <description>Description of the credit rating score.</description>
    <label>Current CR Common Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>