force-app/main/default/objects/Creditsafe_Company_Credit_Score__c/fields/Current_CR_Common_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_CR_Common_Value__c</fullName>
    <description>Value of the credit score.</description>
    <label>Current CR Common Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>