force-app/main/default/objects/Creditsafe_Company_Credit_Score__c/fields/Current_CR_Limit__c.field-meta.xml
<CustomField>
    <fullName>Current_CR_Limit__c</fullName>
    <description>Amount of advisable credit.</description>
    <label>Current CR Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>