force-app/main/default/objects/Creditsafe_Company_Credit_Score__c/fields/Current_CR_Provider_Description__c.field-meta.xml
<CustomField>
    <fullName>Current_CR_Provider_Description__c</fullName>
    <description>Provider description.</description>
    <label>Current CR Provider Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>