force-app/main/default/objects/Creditsafe_Company_Credit_Score__c/fields/Previous_CR_Common_Description__c.field-meta.xml
<CustomField>
    <fullName>Previous_CR_Common_Description__c</fullName>
    <description>Description of the credit score.</description>
    <label>Previous CR Common Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>