force-app/main/default/objects/Creditsafe_Company_Credit_Score__c/fields/Previous_CR_Provider_Value_Max__c.field-meta.xml
<CustomField>
    <fullName>Previous_CR_Provider_Value_Max__c</fullName>
    <description>Max value.</description>
    <label>Previous CR Provider Value Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>